# RL_DDA_DEMO

./: .gitignore  DEPLOY.md  GAME_DATA_COLLECTION.md  TEST_REPLAY.md  compare_replays.py  damage_and_spawn_comparison.md  game_comparison_analysis.md  master.json  pyproject.toml  src.pyxapp  test_game.py
frontend/: .env.development  .env.production  .gitignore  README.md
frontend/frontend/: .env.development
frontend/public/: game.pyxapp
frontend/public/pyxel/: console.html  pyxel.js
frontend/src/: App.tsx  config.ts  main.tsx
frontend/src/api/: replays.ts  scores.ts
frontend/src/components/: InputClient.tsx  MjpegViewer.tsx  ModelGallery.tsx  ReplayPlayer.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/data/: models.ts
frontend/src/pages/: Home.tsx  Models.tsx  Play.tsx  Rank.tsx  Replay.tsx  Watch.tsx
frontend/src/theme/: colors.ts
models/: beginner.pth  master.pth  medium.pth
scripts/: README_VALIDATION.md  apply_enemy_pattern.py  convert_legacy_replays.py  convert_videos_to_h264.py  extract_enemy_spawns.py  record_enemy_pattern.md  stage_1_enemy_spawns.json  update_enemy_events.py  verify_replays.py
src/: const.py  enemy.py  enemy_a.py  enemy_b.py  enemy_c.py  enemy_d.py  enemy_e.py  enemy_f.py  enemy_g.py  enemy_h.py  enemy_i.py  enemy_j.py  enemy_k.py  enemy_l.py  enemy_m.py  enemy_n.py  enemy_o.py  enemy_p.py  enemy_spawn.py  game.py  game_data_collector.py  game_state_complete.py  game_state_stage.py  hud.py  input.py  main.py  player.py  powerup.py  replay_input.py  replay_manager.py
