[project]
name = "rl-dda-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "dlwlgusdev", email = "dlwlgusdev@gmail.com" }
]
dependencies = [
    "pyxel>=2.5.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rl_dda_demo"]
